Reduce maximum hash table size and cleanup